Source/WebCore/css/CSSPrimitiveValue.cpp
@@ -220,9 +220,6 @@ static const AtomicString& propertyName(CSSPropertyID propertyID)
     ASSERT_ARG(propertyID, propertyID >= 0);
     ASSERT_ARG(propertyID, (propertyID >= firstCSSProperty && propertyID < firstCSSProperty + numCSSProperties));
 
-    if (propertyID < 0)
-        return nullAtom;
-
     return getPropertyNameAtomicString(propertyID);
 }
 
